fix for nav logo alignment

--- a/src/css/site.css
+++ b/src/css/site.css
@@ -288,7 +288,7 @@ body {
  * navbar
  * ---------------------------------- */
 .navbar-custom {
-    position: fixed;
+    position: fixed !important;
     top: 0;
     left: 0;
     border: none;
@@ -322,12 +322,8 @@ body {
     background-color: rgba(255, 255, 255, .9);
 }
 .navbar-custom .navbar-brand {
-   
+    padding: 5px 15px;
 }
-.navbar-brand {
-    padding: 5px 10px;
-}
-
 .navbar-custom .navbar-brand:hover,
 .navbar-custom .navbar-brand:active {
     opacity: 1;
